WebCore:

Reviewed by Oliver Hunt and Geoffrey Garen.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17667
          <rdar://problem/5779658> REGRESSION (r30587): Document::implicitClose() not called when done loading page (Image does not get scaled to fit)

        * loader/loader.cpp:
        (WebCore::Loader::didFinishLoading): Changed to call
        setLoadInProgress(false) even for 4xx errors, because that triggers
        load completion check.

LayoutTests:

        Reviewed by Oliver Hunt and Geoffrey Garen.

        - extended test to cover http://bugs.webkit.org/show_bug.cgi?id=17667
          <rdar://problem/5779658> REGRESSION (r30587): Document::implicitClose() not called when done loading page (Image does not get scaled to fit)

        * http/tests/misc/missing-style-sheet-expected.txt:
        * http/tests/misc/missing-style-sheet.html:



Canonical link: https://commits.webkit.org/24450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30762 268f45cc-cd09-0410-ab3c-d52691b4dbfc